--- a/LearnMoto/app/src/main/AndroidManifest.xml
+++ b/LearnMoto/app/src/main/AndroidManifest.xml
@@ -20,6 +20,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".KinderEngActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".FinalResultQuiz"
             android:exported="false">
             <meta-data
@@ -35,7 +42,7 @@
         </activity>
         <activity
             android:name=".UserGuide"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".SciQuiz"
             android:exported="false">
